Add inputs for color picker

--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@
         <p>Home: <span id="homeValue">0</span></p>
         <button id="decrementHome">-</button>
         <button id="incrementHome">+</button>
+        <br>
+        <br>
+        <input type="color" id="homeBackgroundColorPicker" value="#0c63aa">
+        <input type="color" id="homeTextColorPicker" value="#fcce21">
     </div>
 
     <div class="column">
         <p>Away: <span id="awayValue">0</span></p>
         <button id="decrementAway">-</button>
         <button id="incrementAway">+</button>
+        <br>
+        <br>
+        <input type="color" id="awayBackgroundColorPicker" value="#000000">
+        <input type="color" id="awayTextColorPicker" value="#ffffff">
     </div>
 </div>
     <script>
