--- a/display.html
+++ b/display.html
@@ -20,15 +20,23 @@
 <body>
     <div class="container">
         
-        <div class="column"><p>Home</p> <span id="homeValue">0</span></div>
+        <div class="column" id="homeColumn"><p>Home</p> <span id="homeValue">0</span></div>
         <div class="column">
             <h3>Clock</h3>
             <div id="clock">00:00</div>
         </div>
-        <div class="column"><p>Away</p> <span id="awayValue">0</span></div>
+        <div class="column" id="awayColumn"><p>Away</p> <span id="awayValue">0</span></div>
     </div>
 
     <script>
+        const colorChannel = new BroadcastChannel('color_channel');
+        colorChannel.onmessage = (event) => {
+            document.getElementById('homeColumn').style.color = event.data.homeTextColor;
+            document.getElementById('homeColumn').style.backgroundColor = event.data.homeBackgroundColor;
+            document.getElementById('awayColumn').style.color = event.data.awayTextColor;
+            document.getElementById('awayColumn').style.backgroundColor = event.data.awayBackgroundColor;
+        };
+
         const scoreChannel = new BroadcastChannel('score_channel');
         const homeValue = document.getElementById('homeValue');
         const awayValue = document.getElementById('awayValue');
