--- a/display.html
+++ b/display.html
@@ -23,18 +23,18 @@
             text-align: center;
         }
         div {
-            font-size: 20px;
+            font-size: 40px;
             font-weight: bold;
             font-family: Verdana, Geneva, Tahoma, sans-serif
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" onclick="toggleFullScreen()">
         
         <div class="column" id="homeColumn"><p>Home</p> <span id="homeValue">0</span></div>
         <div class="column">
-            <div id="clock">00:00</div>
+            <div id="clock" style="font-size: larger;">00:00</div>
             <br>
             <div id="periodLabel" style="display: none;">Period</div> <div id="period"></div>
         </div>
@@ -77,6 +77,16 @@
                 document.getElementById('period').textContent = '';
             }
         };
+
+        function toggleFullScreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen();
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                }
+            }
+        }
     </script>
 </body>
 </html>
