--- a/display.html
+++ b/display.html
@@ -15,12 +15,16 @@
             /* gap: 10px; */
             width: 100%;
             height: 100%;
+            /*background-color: black;
+            color: white;
+            align-items: center; */
         }
         .column {
             flex: 1; /* Makes all columns equal width */
             padding: 20px;
-            /*background-color: lightgray;*/
             text-align: center;
+            /*background-color: black;
+            color: white; */
         }
         div {
             font-size: 40px;
