--- a/display.html
+++ b/display.html
@@ -16,13 +16,17 @@
             width: 100%;
             height: 100%;
             /*background-color: black;
-            color: white;
-            align-items: center; */
+            color: white; */
+            align-items: stretch;
+            justify-content: center;
         }
         .column {
             flex: 1; /* Makes all columns equal width */
+            display: flex;
+            flex-direction: column;
             padding: 20px;
             text-align: center;
+            justify-content: center;
             /*background-color: black;
             color: white; */
         }
