--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
     <button id="setColors">Set Colors</button>
     <br>
     <a href="display.html" target="_blank" style="font-size: x-small" id="displayLink">Launch Display Page</a>
+    <br>
+    <br>
+    <div id="instructions" style="font-size: x-small;"><table>
+        <tr><td colspan="2"><b>Keyboard Shortcuts</b></td></tr></thead>
+        <tr><td><b>Space</b></td><td>Start/Pause Clock</td></tr>
+        <tr><td><b>a</b></td><td>Home Score -</td></tr>
+        <tr><td><b>s</b></td><td>Home Score +</td></tr>
+        <tr><td><b>d</b></td><td>Guest Score -</td></tr>
+        <tr><td><b>f</b></td><td>Guest Score +</td></tr>
+    </table></div>
 </div>
     <script>
         // set colors
@@ -254,8 +264,28 @@
         increaseButton.addEventListener('click', increaseTime);
         decreaseButton.addEventListener('click', decreaseTime);
         setButton.addEventListener('click', setClock);
-
         updateClockDisplay();
+
+        // Keybindings
+        document.addEventListener('keydown', (event) => {
+            switch (event.key) {
+                case ' ':
+                    startPauseClock();
+                    break;
+                case 'a':
+                    updateScore('home', -1);
+                    break;
+                case 's':
+                    updateScore('home', 1);
+                    break;
+                case 'd':
+                    updateScore('guest', -1);
+                    break;
+                case 'f':
+                    updateScore('guest', 1);
+                    break;
+            }
+        });
     </script>
 </body>
 </html>
