Adjust font sizes

--- a/display.html
+++ b/display.html
@@ -31,7 +31,7 @@
             color: white; */
         }
         div {
-            font-size: 5vw;
+            font-size: 6vw;
             font-weight: bold;
             font-family: Verdana, Geneva, Tahoma, sans-serif
         }
@@ -42,7 +42,7 @@
         
         <div class="column" id="homeColumn"><p>Home</p> <span id="homeValue">0</span></div>
         <div class="column">
-            <div id="clock" style="font-size: larger;">00:00</div>
+            <div id="clock" style="font-size: 200%;">00:00</div>
             <br>
             <div id="periodLabel" style="display: none;">Period</div> <div id="period"></div>
         </div>
